# rcp

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: base.yml  main.yml  pull-requests-main.yml
src/: main.rs
