[package]
name = "rcp"
description = "RCP (Rust CORS Proxy) is a lightweight HTTP proxy server implemented in Rust, enabling Cross-Origin Resource Sharing (CORS) for web applications with ease."
authors = ["Florian Straubinger"]
repository = "https://github.com/f-str/rcp"
readme = "README.md"
license-file = "LICENSE"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
reqwest = "0.12.7"
env_logger = "0.11.5"
log = "0.4.22"
